# Quadcopter-flight-training-system

clover_description/: CMakeLists.txt  package.xml
clover_description/config/: servo_control.yaml
clover_description/launch/: simulator.launch  spawn_drone.launch
clover_description/meshes/clover4/: rotater.dae  servo.dae  ultrasonic_sensor.dae
clover_description/scripts/: fly.py  main.py  range2.py  sonar_listener.cpp
clover_description/urdf/clover/: clover4.xacro
clover_description/urdf/sensors/: servo.gazebo  servo_1.urdf  servo_1.xacro  ultrasonic_sensor_back.urdf.xacro  ultrasonic_sensor_front.urdf.xacro  ultrasonic_sensor_left.urdf.xacro  ultrasonic_sensor_right.urdf.xacro
clover_simulation/: CMakeLists.txt
clover_simulation/launch/: simulator.launch
clover_simulation/resources/worlds/: clover.world  clover_aruco.world
